# computational_quantum_physics_demo

./: .gitignore  CMakeLists.txt  TestConfig.h.in
include/: ExportDataToMatFile.hpp  FFTExecutor.hpp  ImagTimePropagation.hpp  NumericalGrid.hpp  TDSESolverFDInSH.hpp  TDSESolverSH.hpp  Util.hpp  Wavefunction.hpp  cqp_fft.hpp  cqp_itp.hpp  cqp_sh.hpp  cqp_time_test.h  cqp_util.hpp  export_data_to_file.hpp  numerical_grid.hpp  practice_omp.hpp  tdse_fd.hpp  tdse_fft.hpp  tdse_sh_laser.hpp  wave_function.hpp
include/__EXPIRED/: ExportDataToFile.hpp  FFTExecutor.hpp  MathOperator.hpp  NumericalGrid.hpp  TDSESolver.hpp  TDSESolverFD.hpp  TDSESolverFFT.hpp  TimeTest.h  Tools.hpp  Util.hpp  Wavefunction.hpp  WavefunctionSH.hpp
script/: energy_cp.py  plot.py  plot_cp.py  test.py
src/: __ExportDataToMatFile.cpp  cqp_time_test.cpp  main.cpp
src/__EXPIRED/: TimeTest.cpp  __main.cpp
